--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "linux"]
 	path = linux
 	url = https://gitlab.com/riseproject/riscv-optee/linux.git
+[submodule "optee_os"]
+	path = optee_os
+	url = https://gitlab.com/riseproject/riscv-optee/optee_os.git
