--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "optee_os"]
 	path = optee_os
 	url = https://gitlab.com/riseproject/riscv-optee/optee_os.git
+[submodule "opensbi"]
+	path = opensbi
+	url = https://gitlab.com/riseproject/riscv-optee/opensbi.git
