feat: Update the Linux configuration for NFS booting
Signed-off-by: Huang Borong <huangborong@bosc.ac.cn>

--- a/config/xiangshan.config
+++ b/config/xiangshan.config
@@ -54,7 +54,6 @@ CONFIG_RTL8152=y
 CONFIG_NONPORTABLE=y
 CONFIG_RISCV_SBI_V01=y
 CONFIG_HVC_RISCV_SBI=y 
-CONFIG_INITRAMFS_SOURCE="rootfs_nopasswd.cpio"
 CONFIG_CONSOLE_LOGLEVEL_DEFAULT=8
 CONFIG_SERIAL_UARTLITE=y
 CONFIG_SERIAL_UARTLITE_CONSOLE=y
@@ -67,3 +66,6 @@ CONFIG_DWMAC_SUNXI=m
 config_DWMAC_SUN8I=m
 CONFIG_DWC_XLGMAC=y
 CONFIG_DWC_XLGMAC_PCI=y
+CONFIG_BLK_DEV_INITRD=n
+CONFIG_NFS_V3_ACL=y
+CONFIG_NFS_ACL_SUPPORT=y
